src/test/deca/context/valid/created/object/equals.deca
// Description :
//		test de la methode equals
//
// Resultats :
//		Ok


class A{
}
{
A a;
a.equals(a);
a.equals(null);
} 