src/test/deca/context/invalid/created/cast/A_boolean.deca
// Description :
//    test cast entre un A et boolean
//
// Resultats :
//		Erreur contextuelle
//    	Ligne 10: (3.39) Cast impossible de <type1> vers <type2>
	

class A {}
{
A a = (A)(true);
}
